Finish Catalog API

--- a/Services/Catalog/Catalog.API/appsettings.json
+++ b/Services/Catalog/Catalog.API/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "DatabaseSettings" :{
+  "DatabaseSettings": {
     "ConnectionString": "mongodb://127.0.0.1:27017?readPreference=primary&ssl=false",
-    "DatabaseName": "ProductDb",
+    "DatabaseName": "CatalogDb",
     "CollectionName": "Products",
     "BrandsCollection": "Brands",
     "TypesCollection": "Types"
