--- a/Services/Discount/Discount.API/appsettings.json
+++ b/Services/Discount/Discount.API/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseSettings": {
+    "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password=root"
+  },
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http2"
+    }
+  }
 }
