Finish Consum Discount Grpc in Basket API

--- a/Services/Discount/Discount.API/appsettings.json
+++ b/Services/Discount/Discount.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "DatabaseSettings": {
-    "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password=root"
+    "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=postgres;Password=root;"
   },
   "Kestrel": {
     "EndpointDefaults": {
