--- a/Services/Ordering/Ordering.API/appsettings.json
+++ b/Services/Ordering/Ordering.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=Str0ngP@ssw0rd!;TrustServerCertificate=true;"
+  }
 }
