--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -29,6 +29,19 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  orderdb:
+    container_name: orderdb
+    environment:
+      SA_PASSWORD: "Str0ngP@ssw0rd!"
+      ACCEPT_EULA: "Y"
+    restart: always
+    ports:
+      - "1433:1433" 
+    healthcheck:
+       test: ["CMD-SHELL","/opt/mssql-tools/bin/sqlcmd -S orderdb -U sa -P 'Str0ngP@ssw0rd!' -Q 'select 1'"]
+       interval: 10s
+       timeout: 10s
+       retries: 3
 
   catalog.api:
     container_name: catalog.api
@@ -65,6 +78,16 @@ services:
         condition: service_healthy
     ports:
       - "8002:8080"
+
+  ordering.api:
+    container_name: ordering.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ConnectionStrings__OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=Str0ngP@ssw0rd!;TrustServerCertificate=True;"
+    depends_on:
+      - orderdb
+    ports:
+      - "8003:8080"
 
   portainer:
     container_name: portainer
