Finish EventBus and setup action for send event from Basket

--- a/Services/Ordering/Ordering.API/appsettings.json
+++ b/Services/Ordering/Ordering.API/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=Str0ngP@ssw0rd!;TrustServerCertificate=true;"
+  },
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
   }
 }
