--- a/Services/Basket/Basket.API/appsettings.json
+++ b/Services/Basket/Basket.API/appsettings.json
@@ -1,10 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
   "CacheSettings": {
     "ConnectionString": "localhost:6379"
@@ -14,5 +8,8 @@
   },
   "EventBusSettings": {
     "HostAddress": "amqp://guest:guest@localhost:5672"
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200"
   }
 }
