--- a/Services/Catalog/Catalog.API/appsettings.json
+++ b/Services/Catalog/Catalog.API/appsettings.json
@@ -1,10 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
   "DatabaseSettings": {
     "ConnectionString": "mongodb://127.0.0.1:27017?readPreference=primary&ssl=false",
@@ -12,5 +6,8 @@
     "CollectionName": "Products",
     "BrandsCollection": "Brands",
     "TypesCollection": "Types"
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200"
   }
 }
