--- a/Services/Discount/Discount.API/appsettings.json
+++ b/Services/Discount/Discount.API/appsettings.json
@@ -1,10 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
   "DatabaseSettings": {
     "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=postgres;Password=root;"
@@ -13,5 +7,8 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200"
   }
 }
