--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,12 +37,18 @@ services:
     build:
       context: .
       dockerfile: Services/Ordering/Ordering.API/Dockerfile
+  
+  elasticsearch:
+     image: docker.elastic.co/elasticsearch/elasticsearch:8.15.5
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.15.5
 
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
-
+  elasticsearch_data:
 
 
