--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,12 +6,16 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db  
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   basketdb:
     container_name: basketdb
     restart: always
     ports:
       - "6379:6379"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   
   discountdb:
     container_name: discountdb
@@ -29,6 +33,8 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   orderdb:
     container_name: orderdb
@@ -45,6 +51,8 @@ services:
        interval: 10s
        timeout: 10s
        retries: 3
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   rabbitmq:
     container_name: rabbitmq
@@ -52,6 +60,8 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   portainer:
     container_name: portainer
@@ -62,6 +72,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data 
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   
   pgadmin:
     container_name: pgadmin
@@ -73,7 +85,8 @@ services:
       - "5050:80"
     volumes:
       - pgadmin_data:/root/.pgadmin 
-
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   catalog.api:
     container_name: catalog.api
@@ -89,6 +102,8 @@ services:
       - "catalogdb"
     ports:
       - "8000:8080"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   basket.api:
     container_name: basket.api
@@ -103,6 +118,8 @@ services:
       - rabbitmq
     ports:
       - "8001:8080"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   discount.api:
     container_name: discount.api
@@ -115,6 +132,8 @@ services:
         condition: service_healthy
     ports:
       - "8002:8080"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   ordering.api:
     container_name: ordering.api
@@ -128,7 +147,22 @@ services:
      - rabbitmq
     ports:
       - "8003:8080"
-  
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
+  ocelot.apigateway:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    depends_on:
+      - catalog.api
+      - basket.api
+      - discount.api
+      - ordering.api
+    ports:
+      - "8010:8080"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
   elasticsearch:
     container_name: elasticsearch
     environment:
@@ -139,6 +173,8 @@ services:
       - "9200:9200"
     volumes:
       - elasticsearch_data:/usr/share/elasticsearch/data
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   kibana:
     container_name: kibana
@@ -147,9 +183,6 @@ services:
     depends_on:
       - elasticsearch
     ports:
-      - "5601:5601"  
-
-
-
-
-
+      - "5601:5601"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
