--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,12 @@ services:
   kibana:
     image: docker.elastic.co/kibana/kibana:8.15.5
 
+  ocelot.apigateway:
+    image: ${DOCKER_REGISTRY-}ocelotapigateway
+    build:
+      context: .
+      dockerfile: ApiGateways/Ocelot.ApiGateway/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
@@ -51,5 +57,3 @@ volumes:
   pgadmin_data:
   elasticsearch_data:
   orderdb_data:
-
-
